<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!--Montaje de mapa en la aplicacion-->

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/maps_location"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:tag="map"/>


    <!--Button para combio de ubicacion-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_ubication_1"
            android:id="@+id/bttn_ubication_1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_ubication_2"
            android:id="@+id/bttn_ubication_2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_ubication_3"
            android:id="@+id/bttn_ubication_3"/>

        </LinearLayout>


</LinearLayout>